Fixed another styling issue on offices.js, styled the login and register pages, removed extra space below list labels, edited the styling on error message popups

--- a/client/src/pages/page.css
+++ b/client/src/pages/page.css
@@ -79,10 +79,6 @@ label {
     opacity: 1;
 }
 
-.btn-primary{
-    background: #1F2833 !important;
-}
-
 .btn-outline-info.focus, .btn-outline-info:focus {
     box-shadow: none;
 }
@@ -107,4 +103,23 @@ th {
 
 .react-date-picker__wrapper {
     border: none !important;
+}
+
+.alert {
+    padding: none !important;
+    margin: none !important;
+    border: none !important;
+}
+
+.alert-danger {
+    color: red !important;
+    background: none !important;
+}
+
+.alert-primary {
+    background: none;
+}
+
+h6 {
+    margin-bottom: .05em !important;
 }
